clusters/east-nc-clt-2301/heartbeat/heartbeat.yaml
apiVersion: v1
kind: Service
metadata:
  name: heartbeat
  namespace: heartbeat
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: heartbeat
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: heartbeat
  name: heartbeat
  namespace: heartbeat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heartbeat
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: heartbeat
    spec:
      containers:
      - image: ghcr.io/cse-labs/heartbeat:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 5
          periodSeconds: 60
        name: app
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /readyz
            port: http
          initialDelaySeconds: 5
          periodSeconds: 60
        resources:
          limits:
            cpu: 400m
            memory: 128Mi
          requests:
            cpu: 200m
            memory: 64Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
  name: heartbeat
  namespace: heartbeat
spec:
  rules:
  - host: east-nc-clt-2301.res-edge.com
    http:
      paths:
      - backend:
          service:
            name: heartbeat
            port:
              number: 8080
        path: /heartbeat
        pathType: Prefix
  tls:
  - hosts:
    - east-nc-clt-2301.res-edge.com
    secretName: heartbeat
